--- a/research.html
+++ b/research.html
@@ -16,8 +16,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>Dibyendu Nath | Dev : Research</title>
-  <meta name="description" content="Research | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud computing,distributed systems,systems,data mining,analytics">
+  <meta name="description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
+  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,google,cloud computing,distributed systems,systems,data mining,analytics">
   <meta name="author" content="humans.txt">
 
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -26,17 +26,17 @@
   <meta property="fb:page_id" content="">
   <meta property="fb:admins" content="100001639762906" />
   <meta property="og:image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
-  <meta property="og:description" content="Research | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
+  <meta property="og:description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
   <meta property="og:title" content="Dibyendu Nath | Dev : Research">
 
   <!-- Google+ Metadata /-->
   <meta itemprop="name" content="Dibyendu Nath | Dev : Research">
-  <meta itemprop="description" content="Research | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
+  <meta itemprop="description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
   <meta itemprop="image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <link rel="stylesheet" href="css/gumby.css">
+  <link rel="stylesheet" href="bower_components/gumby/css/gumby.css">
 
   <script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
 
@@ -44,7 +44,8 @@
 </head>
 
 <body>
-  <div class="super_wrapper">
+
+<div class="super_wrapper">
   <div class="navcontain">
     <div class="navbar" gumby-fixed="top" id="nav1">
     <div class="row">
@@ -53,21 +54,11 @@
         <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
       </h1>
       <ul class="eight columns main-nav">
-        <li class="pull_right" style="padding-left:10px">
-          <p class="medium pretty default btn icon-github icon-left" style="">
+        <li class="pull_right padding_left_20">
+          <p class="medium pretty default btn icon-github icon-left">
             <a target="_blank" href="https://github.com/dnath">GitHub</a>
           </p>
         </li>
-        <!-- <li class="pull_right">
-          <a href="#">Stuff+ </a>
-          <div class="dropdown">
-            <ul>
-              <li><a href="photos.html">Photography</a></li>
-              <li><a href="#">Paintings</a></li>
-              <li><a href="#">Curio</a></li>
-            </ul>
-          </div>
-        </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
         <li class="pull_right"><a href="#">Research</a></li>
         <li class="pull_right"><a href="index.html">Home</a></li>
@@ -75,7 +66,9 @@
     </div>
     </div>
   </div>
-    
+  <!-- navbar -->
+  
+  <!-- social -->
   <div class="wrapper shaded">
   <div class="row">
     <div class="metro btn default rounded pull_left">
@@ -98,12 +91,13 @@
     </div>
   </div>
   </div>
+  <!-- social -->
 
-  <div class="row" style="padding-top:20px">
+  <div class="row padding_top_20">
     <div class="row">
-      <div class="four columns image rounded pull_center">
+      <div class="four columns image rounded text_center">
         <img src="img/stochss.png" alt="StochSS | Stochastic Simulation As a Service"/>
-        <div style="padding-top:20px">
+        <div class="padding_top_20">
           <h5 class="text_center">
             <a class="default_color red_glow" href="http://www.stochss.org/">
               <i class="icon-globe"></i>StochSS.org
@@ -125,7 +119,7 @@
             <a class="default_color red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab,</a> 
             <a class="default_color red_glow" href="http://www.ucsb.edu/">UC Santa Barbara</a></h6>
         </div>
-        <div style="padding-top:10px;">
+        <div class="padding_top_10">
           <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments. </p>
 
           <ul class="square">
@@ -137,8 +131,8 @@
       </article>
     </div>
 
-    <div class="row" style="padding-top:40px;">
-      <div class="four columns image rounded pull_center">
+    <div class="row padding_top_40">
+      <div class="four columns image rounded text_center">
         <img src="img/ir.png" alt="Query Expansion Improvement in Terrier IR platform"/>
         <div>
           <h5 class="text_center">
@@ -156,7 +150,7 @@
             <a class="default_color red_glow" href="http://www.isical.ac.in/">CV &amp; PR Unit, Indian Statistical Institute</a>
           </h6>
         </div>
-        <div style="padding-top:10px;">
+        <div class="padding_top_10">
           <p>Terrier is a highly flexible, efficient, and effective open source search engine, readily deployable on large corpora of documents.</p>
 
           <ul class="square">
@@ -170,79 +164,99 @@
       </article>
     </div>
   </div>
-  
-  <div class="row" style="padding-bottom:80px"></div>
 
+  <!-- social footer -->
+  <div class="row">
+  <div class="text_center social_footer_box">
+  <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
+    <i class="icon-twitter"> Twitter</i><span class="hide">Twitter | Dev Nath</span>
+  </a> | 
+  <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
+    <i class="icon-facebook-squared"> Facebook</i><span class="hide">Facebook | Dev Nath</span>
+  </a> | 
+  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/dibyendunath">
+    <i class="icon-linkedin"> LinkedIn</i><span class="hide">LinkedIn | Dev Nath</span>
+  </a> | 
+  <a target="_blank" class="social_footer" href="https://github.com/dnath">
+    <i class="icon-github"> Github</i><span class="hide">GitHub | Dev Nath</span>
+  </a> | 
+  <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
+    <i class="icon-gplus"> Google+</i><span class="hide">Google+ | Dev Nath</span>
+  </a> | 
+  <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
+    <i class="icon-instagram"> Instagram</i><span class="hide">Instagram | Dev Nath</span>
+  </a>
+  </div> 
   </div>
-  
-  <div class="wrapper shaded footer">
-    <div class="row">
-    <div class="pull_left">
-      <strong>Dibyendu Nath &copy; 2016</strong> 
-    </div>
-    <div class="pull_right">
-      <strong>January 2016</strong> 
-    </div>
+   
+  <!-- padding for footer -->
+  <div class="row footer_padding"></div>
+
+</div>
+<!-- super wrapper : end -->
+
+<!-- footer : start -->  
+<div class="wrapper shaded footer">
+  <div class="row">
+  <div class="pull_left">
+    <strong>Dibyendu Nath &copy; 2016</strong> 
+  </div>
+  <div class="pull_right">
+    <strong>January 2016</strong> 
   </div>
   </div>
+</div>
+<!-- footer : end --> 
 
+<!-- Grab Google CDN's jQuery, fall back to local if offline -->
+<!-- 2.0 for modern browsers, 1.10 for .oldie -->
+<script>
+var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
+if(!oldieCheck){document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
+}else{document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');}
+</script>
+<script>
+if(!window.jQuery){if(!oldieCheck){document.write(
+'<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
+}else{document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');}}
+</script>
 
-  <!-- Grab Google CDN's jQuery, fall back to local if offline -->
-  <!-- 2.0 for modern browsers, 1.10 for .oldie -->
-  <script>
-  var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
-  if(!oldieCheck) {
-  document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
-  } else {
-  document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');
-  }
-  </script>
-  <script>
-  if(!window.jQuery) {
-  if(!oldieCheck) {
-    document.write('<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
-  } else {
-    document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');
-  }
-  }
-  </script>
+<script src="js/gumby.min.js"></script>
 
-  <script src="js/gumby.min.js"></script>
+<!--
+Google's recommended deferred loading of JS
+gumby.min.js contains gumby.js, all UI modules and gumby.init.js
 
-  <!--
-  Google's recommended deferred loading of JS
-  gumby.min.js contains gumby.js, all UI modules and gumby.init.js
+Note: If you opt to use this method of defered loading,
+ensure that any javascript essential to the initial
+display of the page is included separately in a normal
+script tag.
 
-  Note: If you opt to use this method of defered loading,
-  ensure that any javascript essential to the initial
-  display of the page is included separately in a normal
-  script tag.
+<script type="text/javascript">
+function downloadJSAtOnload() {
+var element = document.createElement("script");
+element.src = "js/libs/gumby.min.js";
+document.body.appendChild(element);
+}
+if (window.addEventListener)
+window.addEventListener("load", downloadJSAtOnload, false);
+else if (window.attachEvent)
+window.attachEvent("onload", downloadJSAtOnload);
+else window.onload = downloadJSAtOnload;
+</script> -->
 
-  <script type="text/javascript">
-  function downloadJSAtOnload() {
-  var element = document.createElement("script");
-  element.src = "js/libs/gumby.min.js";
-  document.body.appendChild(element);
-  }
-  if (window.addEventListener)
-  window.addEventListener("load", downloadJSAtOnload, false);
-  else if (window.attachEvent)
-  window.attachEvent("onload", downloadJSAtOnload);
-  else window.onload = downloadJSAtOnload;
-  </script> -->
+<script src="bower_components/gumby/js/plugins.js"></script>
+<script src="bower_components/gumby/js/main.js"></script>
 
-  <script src="bower_components/gumby/js/plugins.js"></script>
-  <script src="bower_components/gumby/js/main.js"></script>
+<!-- Google Analytics -->
+<script src="js/google_tracker.js"></script>
 
-  <!-- Google Analytics -->
-  <script src="js/google_tracker.js"></script>
+<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+   chromium.org/developers/how-tos/chrome-frame-getting-started -->
+<!--[if lt IE 7 ]>
+<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+<![endif]-->
 
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-     chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7 ]>
-  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-  <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
-
-  </body>
+</body>
 </html>
